--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-cargar-forma-pago/obs-cargar-forma-pago.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-cargar-forma-pago/obs-cargar-forma-pago.component.scss
@@ -2,6 +2,13 @@
   opacity: .5;
 }
 
+.img-size {
+  width: 1.9em;
+  height: 1.9em;
+  margin-right: 1em;
+  margin-bottom: .5em;
+}
+
 .contenidoContrato{
     width: 100%;
     margin-top: 20px;
