--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-registrar-sol-pago-autoriz/obs-registrar-sol-pago-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-registrar-sol-pago-autoriz/obs-registrar-sol-pago-autoriz.component.html
@@ -7,23 +7,23 @@
             </ng-container>
             <ng-container matColumnDef="pagosRealizados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Pagos Realizados </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.pagosRealizados }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.pagosRealizados !== undefined ? element.pagosRealizados : 0 }} </td>
             </ng-container>
             <ng-container matColumnDef="valorFacturado">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor facturado </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.valorFacturado !== undefined ? ( element.valorFacturado | currency:'':'symbol-narrow':'.0-0' ) : ( 0 | currency:'':'symbol-narrow':'.0-0' ) }} </td>
             </ng-container>
             <ng-container matColumnDef="porcentajeFacturado">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje facturado </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajeFacturado.toFixed( 2 ) }}% </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajeFacturado !== undefined ? element.porcentajeFacturado.toFixed( 2 ) : 0 }}% </td>
             </ng-container>
             <ng-container matColumnDef="saldoPorPagar">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo por pagar </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPorPagar | currency:'':'symbol-narrow':'.0-0' }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPorPagar !== undefined ? ( element.saldoPorPagar | currency:'':'symbol-narrow':'.0-0' ) : ( 0 | currency:'':'symbol-narrow':'.0-0' ) }} </td>
             </ng-container>
             <ng-container matColumnDef="porcentajePorPagar">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Porcentaje por pagar </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajePorPagar.toFixed( 2 ) }}% </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.porcentajePorPagar !== undefined ? element.porcentajePorPagar.toFixed( 2 ) : 0 }}% </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
