--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
@@ -162,12 +162,12 @@
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforo">
                     Validar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-form-valid-listchequeo-vfsp [contrato]="contrato"></app-form-valid-listchequeo-vfsp>
+            <app-form-valid-listchequeo-vfsp [contrato]="contrato" (estadoSemaforo)="estadoSemaforo = $event"></app-form-valid-listchequeo-vfsp>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
