--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-verificar-solicitud-vfsp/form-verificar-solicitud-vfsp.component.html
@@ -71,7 +71,7 @@
                     </table>
                 </div>
                 <div class="tabs--actions"  style="margin-top: 1em;">
-                    <button mat-raised-button color="accent" class="tabs--btn auxBtn"
+                    <button mat-raised-button color="accent" type="button" class="tabs--btn auxBtn"
                         (click)="openProyectosAsociados()">
                         Ver proyectos asociados
                     </button>
