--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-validar-solicitud-validfsp/form-validar-solicitud-validfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-validar-solicitud-validfsp/form-validar-solicitud-validfsp.component.html
@@ -41,10 +41,10 @@
                         <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                     <div class="chart2">
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ ( contrato.plazoFase2ConstruccionMeses !== undefined ? contrato.plazoFase2ConstruccionMeses : 0 ) + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + ( contrato.plazoFase2ConstruccionDias !== undefined ? contrato.plazoFase2ConstruccionDias : 0 ) }} </p>
                         <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                         <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date: 'dd/MM/yyyy' }} </p>
-                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined && contrato.plazoFase2ConstruccionMeses !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                 </div>
                 <h2 class="card-subTitle">DRP</h2>
@@ -60,18 +60,18 @@
                         </ng-container>
                         <ng-container matColumnDef="valor">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <ng-container matColumnDef="saldo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de registro presupuestal de alli viene el saldo inicial </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                     </table>
                 </div>
                 <div class="tabs--actions"  style="margin-top: 1em;">
-                    <button mat-raised-button color="accent" class="tabs--btn auxBtn"
+                    <button mat-raised-button color="accent" type="button" class="tabs--btn auxBtn"
                         (click)="openProyectosAsociados()">
                         Ver proyectos asociados
                     </button>
@@ -153,9 +153,9 @@
 
             <mat-card class="shipping-card var-main-gris">
                 <mat-card-content style="text-align: left;">
-                    <p><strong>Fecha de Radicación SAC a financiera:</strong> 10/10/2020 </p>
-                    <p><strong>Número de radicación SAC a financiera:</strong> 009898 </p>
-                    <p><strong>Fecha de asignación:</strong> 11/10/2020 </p>
+                    <p><strong>Fecha de Radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaRadicacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
+                    <p><strong>Número de radicación SAC a financiera:</strong> {{ contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera !== undefined ? contrato.solicitudPagoOnly.numeroRadicacionSacFinanciera : '' }} </p>
+                    <p><strong>Fecha de asignación:</strong> {{ contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera !== undefined ? ( contrato.solicitudPagoOnly.fechaAsignacionSacFinanciera | date: 'dd/MM/yyyy' ) : '' }} </p>
                 </mat-card-content>
             </mat-card>
 
