--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/validar-financ-solicitud-pago/validar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/validar-financ-solicitud-pago/validar-financ-solicitud-pago.component.html
@@ -20,7 +20,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de verificación financiera </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
@@ -28,7 +28,7 @@
             </ng-container>
             <ng-container matColumnDef="modalidadContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadContrato }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="numeroContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
@@ -36,34 +36,93 @@
             </ng-container>
             <ng-container matColumnDef="estadoValidacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la validación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoValidacion }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistro">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del Registro </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <span class="info-text info-text__table" [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}"></span>
+                    <span class="info-text info-text__table"
+                        [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}"
+                        style="margin-right: 0em;"></span>
+                    <br>
                     {{ element.estadoRegistro }} 
                 </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-                <td mat-cell *matCellDef="let element" align="center"> 
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.validarSolicitud(element.gestion)"
-                    *ngIf="element.estadoValidacion=='Sin validación'">
-                        Verificar solicitud
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()"
-                    *ngIf="element.estadoValidacion=='Con validación de la solicitud por el equipo financiero'">
-                        Rechazar solicitud
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)"
-                    *ngIf="element.estadoValidacion=='Con validación de la solicitud por el equipo financiero'">
-                        Ver detalle/Editar
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)"
-                    *ngIf="element.estadoValidacion=='Rechazada por el equipo financiero' || element.estadoValidacion=='Con solicitud aprobada por el supervisor'">
-                        Ver detalle
-                    </button>
+                <td mat-cell *matCellDef="let element" align="center">
+                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitud.expensas; else esExpensas">
+                        
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'validarFinancSolicitud', element.contratoId, element.solicitudPagoId ]">
+                                Validar Solicitud
+                        </button>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'validarFinancSolicitud', element.contratoId, element.solicitudPagoId ]">
+                                Ver detalle/Editar
+                        </button>
+
+                        <!--
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Rechazar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Subsanar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Enviar para orden de giro
+                        </button>
+                        -->
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleValidarFinancSolicitud', element.contratoId, element.solicitudPagoId ]">
+                                Ver detalle
+                        </button>
+
+                    </ng-container>
+                    <ng-template #esExpensas>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'validarExpensas', element.solicitudPagoId ]">
+                                Validar Solicitud
+                        </button>
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'validarExpensas', element.solicitudPagoId ]">
+                                Ver detalle/Editar
+                        </button>
+
+                        <!--
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Rechazar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Subsanar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
+                            Enviar para orden de giro
+                        </button>
+                        -->
+
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
+                                Ver detalle
+                        </button>
+
+                    </ng-template>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
