--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
@@ -93,7 +93,7 @@
         </div>
       </section>
 
-      <mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionInterventoria">
+      <mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionInterventoria && report.proyecto.informeFinal[0].estadoCumplimiento != '3'">
         <mat-card-header class="header-card header-card--margin">
           <mat-card-title class="mat-card-title header-card--text">
             Verificación del grupo de novedades y liquidaciones
@@ -116,6 +116,30 @@
           </p>
         </mat-card-content>
       </mat-card>
+      <mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionInterventoria && report.proyecto.informeFinal[0].estadoCumplimiento == '3'">
+        <mat-card-header class="header-card header-card--margin">
+          <mat-card-title class="mat-card-title header-card--text">
+            Verificación del grupo de novedades y liquidaciones
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            <strong>
+              {{ report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].fechaCreacion | date:'dd/MM/yyyy' }} 
+            </strong>
+          </p>
+          <p>
+            <strong>
+              ¿Desde el grupo de novedades y liquidaciones tiene observaciones al informe final del proyecto?:
+            </strong>
+            <span *ngIf="report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones != null && report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones != ''"> Si</span>
+            <span *ngIf="report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones == null || report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones === ''"> No</span>
+          </p>
+          <p *ngIf="report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones != null && report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones != ''" [innerHTML]="report.proyecto.informeFinal[0].historialObsInformeFinalInterventoriaNovedades[0].observaciones">
+          </p>
+        </mat-card-content>
+      </mat-card>
+ 
     </mat-expansion-panel>
   </mat-accordion>
 </div>
