--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actua-tramite-cc/control-y-tabla-actua-tramite-cc.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/gestionarTramiteControversiasContractuales/registrarNuevaActuacionTramite" mat-raised-button
+<a routerLink="/gestionarTramiteControversiasContractuales/registrarNuevaActuacionTramite/{{this.controversiaID}}/0" mat-raised-button
     color="accent" class="btn-cargar-proyecto">Registrar nueva actuación del trámite</a><br>
 <div style="margin-top: 2em;">
     <div class="busqueda">
