--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalle-actuacion-contr-contrct/ver-detalle-actuacion-contr-contrct.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalle-actuacion-contr-contrct/ver-detalle-actuacion-contr-contrct.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia" mat-button
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia/{{this.controversiaId}}" mat-button
             color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
@@ -17,6 +17,10 @@
                 <p><b>Estado de avance del trámite:</b> {{this.estadoAvanceTramite}}</p>
                 <p><b>Fecha de la actuación adelantada:</b> {{this.fechaActuacionAdelantada | date:'dd/MM/yyyy'}}</p>
                 <p><b>Actuación adelantada:</b> {{this.actuacionAdelantada}}</p>
+                <p *ngIf="this.actuacionAdelantada=='Otra'"><b>Cual:</b></p>
+                <div *ngIf="this.actuacionAdelantada=='Otra'">
+                    <div [innerHtml]="this.detalleOtra1"></div>
+                </div>
                 <p><b>Próxima actuación requerida:</b>{{this.actuacionRequerida}}</p>
                 <p *ngIf="this.actuacionRequerida=='Otra'"><b>Cual:</b></p>
                 <div *ngIf="this.actuacionRequerida=='Otra'">
