--- a/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
@@ -66,6 +66,10 @@ strong {
   text-align: right;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .mat-button.btn-regresar {
   height: 2em;
   padding: 0;
