--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-reclamacion/control-y-tabla-actuacion-reclamacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-reclamacion/control-y-tabla-actuacion-reclamacion.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/gestionarTramiteControversiasContractuales/registrarNuevaActuacionReclamacion" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar nueva actuación de la reclamación</a><br>
+<a routerLink="/gestionarTramiteControversiasContractuales/registrarNuevaActuacionReclamacion/{{this.idControversia}}/{{this.idReclamacion}}/0" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar nueva actuación de la reclamación</a><br>
 <div style="margin-top: 2em;">
     <div class="busqueda">
         <mat-form-field appearance="outline" class="busqueda--input">
