--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/actualizar-reclamacion-aseg-cc/actualizar-reclamacion-aseg-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/actualizar-reclamacion-aseg-cc/actualizar-reclamacion-aseg-cc.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia/{{this.controversiaID}}" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
@@ -34,6 +34,6 @@
                 <p><strong>Fecha de radicación:</strong> {{this.fechaRadicacion | date:'dd/MM/yyyy'}}</p>
             </mat-card-content>
         </mat-card>
-        <app-control-y-tabla-actuacion-reclamacion></app-control-y-tabla-actuacion-reclamacion>
+        <app-control-y-tabla-actuacion-reclamacion [idControversia]="this.controversiaID" [idReclamacion]="this.reclamID"></app-control-y-tabla-actuacion-reclamacion>
     </div>
 </div>
