--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleeditar-reclamacion/ver-detalleeditar-reclamacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleeditar-reclamacion/ver-detalleeditar-reclamacion.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia/{{this.idControversia}}" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
@@ -10,7 +10,7 @@
     <p class="info-sub-title">
         <span>Actuación: <b>{{this.actuacion}}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Número de actuación: <b>{{this.numActuacion}}</b></span>
     </p>
-    <app-form-reclamacion-aseguradora-actuacion [controversiaAct]=this.idControversia [isEditable]="true" 
+    <app-form-reclamacion-aseguradora-actuacion [controversiaID]=this.idControversia [controversiaAct]=this.idActuacion [isEditable]="true" 
     (numReclamacion)="this.numReclamacion=$event" (actuacion)="this.actuacion=$event"
     (numActuacion)="this.numActuacion=$event"></app-form-reclamacion-aseguradora-actuacion>
 </div>
