--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleeditar-actuacion-reclm/ver-detalleeditar-actuacion-reclm.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleeditar-actuacion-reclm/ver-detalleeditar-actuacion-reclm.component.html
@@ -12,5 +12,5 @@
     </p>
     <app-form-actuacion-reclamacion [isEditable]="true"
     [controversiaID]="this.controversiaId" [reclamacionID]="this.reclamacionId" [idReclamacionActuacion]="this.idReclamacionActuacion"
-    (codRecalamacion)="this.numReclamacion = $event" (codReclamacionActuacion)="this.codReclamacionActuacion = $event"></app-form-actuacion-reclamacion>
+     (codReclamacionActuacion)="this.codReclamacionActuacion = $event"></app-form-actuacion-reclamacion>
 </div>
