--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/verdetalle-reclamacion-actuacion-cc/verdetalle-reclamacion-actuacion-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/verdetalle-reclamacion-actuacion-cc/verdetalle-reclamacion-actuacion-cc.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarReclamoAseguradora" mat-button
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarReclamoAseguradora/{{this.controversiaId}}/{{this.reclamacionId}}" mat-button
             color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
