ajuste novedad aportante

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
@@ -39,6 +39,7 @@
   <div class="mb-2em">
     <app-expansion-panel
                         [novedad]="novedad"
+                        [tieneAdicion]="tieneAdicion"
     >
   </app-expansion-panel>
   </div>
