--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/expansion-panel/expansion-panel.component.html
@@ -44,8 +44,22 @@
         </p>
       </mat-card-content>
     </mat-card>
-
   </mat-expansion-panel>
+
+  <mat-expansion-panel class="expansion-style" *ngIf="tieneAdicion">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title" [ngClass]="{
+        'sin-diligenciar':true,
+        'en-proceso':false,
+        'completo':false, 
+        'en-alerta':false
+      }">
+      Detallar solicitud
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-form-detallar-solicitud-novedad></app-form-detallar-solicitud-novedad>
+  </mat-expansion-panel>
+
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
       <mat-panel-title class="expansion-style--title" [ngClass]="{
@@ -72,17 +86,5 @@
     </mat-expansion-panel-header>
     <app-registrar-firmas></app-registrar-firmas>
   </mat-expansion-panel>
-  <mat-expansion-panel class="expansion-style">
-    <mat-expansion-panel-header class="expansion-style--header">
-      <mat-panel-title class="expansion-style--title" [ngClass]="{
-        'sin-diligenciar':true,
-        'en-proceso':false,
-        'completo':false,
-        'en-alerta':false
-      }">
-      Detallar solicitud
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <app-form-detallar-solicitud-novedad></app-form-detallar-solicitud-novedad>
-  </mat-expansion-panel>
+  
 </mat-accordion>
