--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/detalle-recibo-satisfaccion/detalle-recibo-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/detalle-recibo-satisfaccion/detalle-recibo-satisfaccion.component.html
@@ -6,7 +6,7 @@
   </mat-card-header>
   <mat-card-content>
     <p>
-      <strong> URL Acta de recibo a satisfaccion - Obra: </strong>
+      <strong> URL Acta de recibo a satisfacción - Obra: </strong>
       {{ report.proyecto.informeFinal[0].urlActa }}
     </p>
     <p>
