--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
@@ -14,7 +14,7 @@
               (addressForm.get('urlActa').invalid && estaEditando)
             "
           >
-            URL Acta de recibo a satisfaccion - Obra
+            URL Acta de recibo a satisfacción - Obra
           </label>
         </div>
         <div class="col">
@@ -135,7 +135,7 @@
   </mat-card-header>
   <mat-card-content>
     <p>
-      <strong> URL Acta de recibo a satisfaccion - Obra: </strong>
+      <strong> URL Acta de recibo a satisfacción - Obra: </strong>
       {{ report.proyecto.informeFinal[0].urlActa }}
     </p>
     <p>
