--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/recibo-satisfaccion/recibo-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/recibo-satisfaccion/recibo-satisfaccion.component.html
@@ -7,7 +7,7 @@
   <mat-card-content>
     <p>
       <strong>
-        URL Acta de recibo a satisfaccion - Obra:
+        URL Acta de recibo a satisfacción - Obra:
       </strong>
       {{ report.proyecto.informeFinal[0].urlActa }}
     </p>
